<resources>
    <string name="app_name">LearnAppDesign</string>
    <string name="title_home">Home</string>
    <string name="title_classes">Classes</string>
    <string name="title_homeworks">Homeworks</string>
    <string name="title_favorites">Favorites</string>
    <string name="top_bar_greetings_text">Hi, Mike!</string>
    <string name="desc_search">Search</string>
    <string name="desc_settings">Settings</string>
    <string name="desc_profile">Profile</string>
    <string name="top_bar_profile_icon_text">👨‍🎓</string>
    <string name="timer_card_label_text">A you ready for exams?</string>
    <string name="timer_colon_text">:</string>
    <string name="timer_days_label">Days</string>
    <string name="timer_hours_label">Hours</string>
    <string name="timer_minutes_label">Minutes</string>
    <string name="classes_block_label_text">Classes</string>
    <string name="classes_block_hint_text">6 classes today</string>
    <string name="homework_block_label_text">Homeworks</string>
    <string name="descEventIcon">Event Icon</string>
    <string name="desc_open_in_image">Open with image</string>
    <string name="open_in_block_text">Open in</string>
    <string name="top_bar_classes_text">Classes</string>
    <string name="classes_date_text">Today, 1 June</string>
    <string name="desc_round">Round</string>
</resources>