<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/container_margin"
        android:paddingTop="@dimen/container_top_padding">

        <TextView
            android:id="@+id/text_greetings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_bar_text_margin"
            android:text="@string/top_bar_greetings_text"
            android:textAlignment="center"
            android:textSize="@dimen/top_bar_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/search"
            android:layout_width="@dimen/top_bar_icon_size"
            android:layout_height="@dimen/top_bar_icon_size"
            android:layout_marginEnd="@dimen/top_bar_icon_margin_end"
            android:contentDescription="@string/desc_search"
            android:src="@drawable/ic_baseline_search_24"
            app:layout_constraintBottom_toBottomOf="@id/text_greetings"
            app:layout_constraintEnd_toStartOf="@id/settings"
            app:layout_constraintTop_toTopOf="@id/text_greetings" />

        <ImageView
            android:id="@+id/settings"
            android:layout_width="@dimen/top_bar_icon_size"
            android:layout_height="@dimen/top_bar_icon_size"
            android:layout_marginEnd="@dimen/top_bar_icon_margin_end"
            android:contentDescription="@string/desc_settings"
            android:src="@drawable/ic_discover_tune_48p"
            app:layout_constraintBottom_toBottomOf="@id/text_greetings"
            app:layout_constraintEnd_toStartOf="@id/profile_oval"
            app:layout_constraintTop_toTopOf="@id/text_greetings" />

        <ImageView
            android:id="@+id/profile_oval"
            android:layout_width="@dimen/top_bar_profile_icon_size"
            android:layout_height="@dimen/top_bar_profile_icon_size"
            android:contentDescription="@string/desc_profile"
            android:src="@drawable/shape_oval"
            app:layout_constraintBottom_toBottomOf="@id/text_greetings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_greetings" />

        <TextView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/top_bar_profile_icon_text"
            android:textSize="@dimen/top_bar_profile_icon_text_size"
            app:layout_constraintBottom_toBottomOf="@id/profile_oval"
            app:layout_constraintEnd_toEndOf="@id/profile_oval"
            app:layout_constraintStart_toStartOf="@id/profile_oval"
            app:layout_constraintTop_toTopOf="@id/profile_oval" />

        <androidx.cardview.widget.CardView
            android:id="@+id/timer_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/timer_card_height"
            android:layout_marginTop="@dimen/timer_card_margin_top"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_greetings">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape_gradient">

                <TextView
                    android:id="@+id/card_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/timer_card_label_margin_top"
                    android:gravity="center"
                    android:text="@string/timer_card_label_text"
                    android:textSize="@dimen/timer_card_label_text_size"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/d1"
                    android:layout_width="@dimen/timer_digit_width"
                    android:layout_height="@dimen/timer_digit_height"
                    android:layout_marginHorizontal="@dimen/timer_digit_margin_horizontal"
                    android:layout_marginTop="@dimen/timer_digit_margin_top"
                    android:background="@drawable/shape_digit_back"
                    android:gravity="center"
                    android:textSize="@dimen/timer_digit_text_size"
                    app:layout_constraintEnd_toStartOf="@id/d2"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_label"
                    tools:text="0" />

                <TextView
                    android:id="@+id/d2"
                    android:layout_width="@dimen/timer_digit_width"
                    android:layout_height="@dimen/timer_digit_height"
                    android:layout_marginHorizontal="@dimen/timer_digit_margin_horizontal"
                    android:background="@drawable/shape_digit_back"
                    android:gravity="center"
                    android:textSize="@dimen/timer_digit_text_size"
                    app:layout_constraintEnd_toStartOf="@id/colon1"
                    app:layout_constraintStart_toEndOf="@id/d1"
                    app:layout_constraintTop_toTopOf="@id/d1"
                    tools:text="0" />

                <TextView
                    android:id="@+id/colon1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/timer_colon_margin_horizontal"
                    android:text="@string/timer_colon_text"
                    android:textSize="@dimen/timer_colon_text_size"
                    app:layout_constraintBottom_toBottomOf="@id/d1"
                    app:layout_constraintEnd_toStartOf="@id/h1"
                    app:layout_constraintStart_toEndOf="@id/d2"
                    app:layout_constraintTop_toTopOf="@id/d1" />

                <TextView
                    android:id="@+id/h1"
                    android:layout_width="@dimen/timer_digit_width"
                    android:layout_height="@dimen/timer_digit_height"
                    android:layout_marginHorizontal="@dimen/timer_digit_margin_horizontal"
                    android:background="@drawable/shape_digit_back"
                    android:gravity="center"
                    android:textSize="@dimen/timer_digit_text_size"
                    app:layout_constraintEnd_toStartOf="@id/h2"
                    app:layout_constraintStart_toEndOf="@id/colon1"
                    app:layout_constraintTop_toTopOf="@id/d1"
                    tools:text="0" />

                <TextView
                    android:id="@+id/h2"
                    android:layout_width="@dimen/timer_digit_width"
                    android:layout_height="@dimen/timer_digit_height"
                    android:layout_marginHorizontal="@dimen/timer_digit_margin_horizontal"
                    android:background="@drawable/shape_digit_back"
                    android:gravity="center"
                    android:textSize="@dimen/timer_digit_text_size"
                    app:layout_constraintEnd_toStartOf="@id/colon2"
                    app:layout_constraintStart_toEndOf="@id/h1"
                    app:layout_constraintTop_toTopOf="@id/d1"
                    tools:text="0" />

                <TextView
                    android:id="@+id/colon2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/timer_colon_margin_horizontal"
                    android:text="@string/timer_colon_text"
                    android:textSize="@dimen/timer_colon_text_size"
                    app:layout_constraintBottom_toBottomOf="@id/d1"
                    app:layout_constraintEnd_toStartOf="@id/m1"
                    app:layout_constraintStart_toEndOf="@id/h2"
                    app:layout_constraintTop_toTopOf="@id/d1" />

                <TextView
                    android:id="@+id/m1"
                    android:layout_width="@dimen/timer_digit_width"
                    android:layout_height="@dimen/timer_digit_height"
                    android:layout_marginHorizontal="@dimen/timer_digit_margin_horizontal"
                    android:background="@drawable/shape_digit_back"
                    android:gravity="center"
                    android:textSize="@dimen/timer_digit_text_size"
                    app:layout_constraintEnd_toStartOf="@id/m2"
                    app:layout_constraintStart_toEndOf="@id/colon2"
                    app:layout_constraintTop_toTopOf="@id/d1"
                    tools:text="0" />

                <TextView
                    android:id="@+id/m2"
                    android:layout_width="@dimen/timer_digit_width"
                    android:layout_height="@dimen/timer_digit_height"
                    android:layout_marginHorizontal="@dimen/timer_digit_margin_horizontal"
                    android:background="@drawable/shape_digit_back"
                    android:gravity="center"
                    android:textSize="@dimen/timer_digit_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/m1"
                    app:layout_constraintTop_toTopOf="@id/d1"
                    tools:text="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/timer_digits_label_margin_top"
                    android:text="@string/timer_days_label"
                    app:layout_constraintEnd_toEndOf="@id/d2"
                    app:layout_constraintStart_toStartOf="@id/d1"
                    app:layout_constraintTop_toBottomOf="@id/d1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/timer_digits_label_margin_top"
                    android:fontFamily="@font/roboto"
                    android:text="@string/timer_hours_label"
                    app:layout_constraintEnd_toEndOf="@id/h2"
                    app:layout_constraintStart_toStartOf="@id/h1"
                    app:layout_constraintTop_toBottomOf="@id/d1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/timer_digits_label_margin_top"
                    android:text="@string/timer_minutes_label"
                    app:layout_constraintEnd_toEndOf="@id/m2"
                    app:layout_constraintStart_toStartOf="@id/m1"
                    app:layout_constraintTop_toBottomOf="@id/d1" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/classes_block_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/container_top_padding"
            android:text="@string/classes_block_label_text"
            android:textSize="@dimen/block_label_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timer_card" />

        <TextView
            android:id="@+id/classes_block_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classes_block_hint_text"
            android:textColor="@color/text_color_secondary"
            android:textSize="@dimen/block_hint_text_size"
            app:layout_constraintBottom_toBottomOf="@id/classes_block_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/classes_block_label" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/classes_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/block_recycler_margin_top"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/classes_block_label"
            tools:listitem="@layout/card_class_item_small" />

        <TextView
            android:id="@+id/homeworks_block_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/container_top_padding"
            android:text="@string/homework_block_label_text"
            android:textSize="@dimen/block_label_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/classes_recycler" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/homeworks_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/block_recycler_margin_top"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/homeworks_block_label"
            tools:listitem="@layout/card_homework_item"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>